fix code[flex wrap]

--- a/css/style.css
+++ b/css/style.css
@@ -227,6 +227,7 @@ main {
 .recentlyAlbum{
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 .albumListen{
